...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activity.MainActivity">

    <LinearLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="1dp">

...
            android:layout_margin="10sp"
            android:layout_gravity="center"
            android:columnCount="2"
            android:rowCount="3">

            <Button
                android:id="@+id/primRedButton"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:backgroundTint="@color/red_500"
                android:textStyle="bold" />

...
            android:layout_margin="10sp"
            android:layout_gravity="center"
            android:columnCount="2"
            android:rowCount="5">

            <Button
                android:id="@+id/secBlackButton"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:textStyle="bold" />
...
                android:textColor="@color/black"
                android:textStyle="bold" />

        </GridLayout>

        <Button
            android:id="@+id/saveTheme"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Save Theme" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
